# twilio-whatsapp-platform-adapter

./: .env.example  .gitignore  CLAUDE.md  README.md  plugin.yaml  pyproject.toml
tests/: test_live.py  test_runtime.py  test_static.py
twilio_whatsapp_platform_adapter/: __init__.py  adapter.py  helpers.py
